@@ -1,6 +1,11 @@
-2008-04-07  Don Porter  <dgp@users.sourceforge.net>
+2008-04-07  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.4.19 TAGGED FOR RELEASE ***
+
+	* generic/tkWindow.c (Initialize): fix double-free on Tk_ParseArgv
+	* tests/main.test (main-3.*):      error. [Bug 1937135]
+
+2008-04-07  Don Porter  <dgp@users.sourceforge.net>
 
 	* README:		Bump version number to 8.4.19
 	* generic/tk.h:
